CHANGE: header__container background color

--- a/pawscity.css
+++ b/pawscity.css
@@ -31,7 +31,7 @@
   }
   
   .header__container {
-    background-color: #f88824;
+    background-color: #f7b129;
     color: #fff;
     padding: 1em 0;
   }
